--- a/cat-site/cnw/appendix.html
+++ b/cat-site/cnw/appendix.html
@@ -508,8 +508,6 @@ København</span></a> Finn Høffdings arkiv XLIII, 09)</li>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_17" href="document.xq?doc=cnw0017.xml">CNW 17</a></p>
                     <div><i>Aladdin</i>
                         <ul class="bullet">
-                            <li>No. 11:<i> Marsch </i>arranged for piano, Borups Musikforlag,
-                                København (1926)</li>
                             <li>Excerpts (No. 11 <i>Marsch</i>, No. 22 <i>Aladdins Drøm</i>, No. 16
                                     <i>Hindudans</i>, No. 14 <i>Kineserdans</i>, No. 17
                                     <i>Negerdans</i>) arranged for salon orchestra, Borups
@@ -538,8 +536,19 @@ København</span></a> Kjell Roikjers arkiv XVI,
                     </ul>
                     </div>
                 </div>
+                <div><p class="work_number"><a class="work_number_reference" name="CNW_25" href="document.xq?doc=cnw0025.xml">CNW 25</a></p>
+                    <div><i>Symfoni nr. 1</i>, opus 7 <ul class="bullet">
+                        <li>Arranged for piano (four hands) by Henrik Knudsen,
+                            Wilhelm Hansen (1901); fair copy (Henrik Knudsen), <a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
+                                København</span></a> CNS 62e</li>
+                        <li>Fourth movement partly re-instrumented by Ebbe Hamerik
+                            (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
+                                København</span></a> CNS 62f)</li>
+                    </ul>
+                    </div>
+                </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_26" href="document.xq?doc=cnw0026.xml">CNW 26</a></p>
-                    <div><i>Symfoni nr. 2</i>, op. 16 <ul class="bullet">
+                    <div><i>Symfoni nr. 2</i>, opus 16 <ul class="bullet">
                             <li>Second movement arranged for two pianos by Jørgen Bentzon (1917–18)
                                     (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
 København</span></a> Jørgen Bentzons arkiv XIII, 3)</li>
@@ -547,12 +556,16 @@ København</span></a> Jørgen Bentzons arkiv XIII, 3)</li>
                                 Jørgen Bentzon (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
 København</span></a> Jørgen Bentzons arkiv I, 08 and XIII,
                                 3)</li>
-                        </ul>
+                        <li>Arranged for piano (four hands) by Henrik Knudsen and Hilda Sehested,
+                            Wilhelm Hansen (1917); printer's manuscript (Henrik Knudsen and Hilda Sehested): <a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
+                                København</span></a> CNS 63c; draft (Hilda Sehested): <a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
+                                    København</span></a> CNS 63d</li>
+                    </ul>
                     </div>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_27" href="document.xq?doc=cnw0027.xml">CNW 27</a></p>
-                    <div><i>Symfoni nr. 3</i>, op. 27 <ul class="bullet">
-                            <li>First movement arranged for piano four hands by Jørgen Bentzon
+                    <div><i>Symfoni nr. 3</i>, opus 27 <ul class="bullet">
+                            <li>First movement arranged for piano (four hands) by Jørgen Bentzon
                                 (incomplete) [1915] (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
 København</span></a> Jørgen Bentzons arkiv I, 06)</li>
                             <li>First and second movement arranged for two pianos and harmonium
@@ -563,17 +576,34 @@ København</span></a> Jørgen Bentzons arkiv I, 08 and XIII,
                     </div>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_28" href="document.xq?doc=cnw0028.xml">CNW 28</a></p>
-                    <div><i>Symfoni nr. 4</i>, op. 29
+                    <div><i>Symfoni nr. 4</i>, opus 29
                         <ul class="bullet">
                             <li>Bars 1–670 arranged for two pianos by
-                        Jørgen Bentzon (incomplete) (1917–18) (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
-København</span></a> Jørgen Bentzons arkiv
-                        XIII, 3)</li>
-                    </ul>
+                                Jørgen Bentzon (incomplete) (1917–18) (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
+                                    København</span></a> Jørgen Bentzons arkiv
+                                XIII, 3)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div><p class="work_number"><a class="work_number_reference" name="CNW_34" href="document.xq?doc=cnw0034.xml">CNW 34</a></p>
+                    <div><i>Helios</i>, opus 17
+                        <ul class="bullet">
+                            <li>Arranged for piano (four hands) by Henrik Knudsen, Wilhelm Hansen (1905)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div><p class="work_number"><a class="work_number_reference" name="CNW_57" href="document.xq?doc=cnw0057.xml">CNW 57</a></p>
+                    <div><i>Kvartet for to violiner, bratsch og cello</i>, opus 14
+                        <ul class="bullet">
+                            <li>Bars 1–670 arranged for two pianos by
+                                Jørgen Bentzon (incomplete) (1917–18) (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
+                                    København</span></a> Jørgen Bentzons arkiv
+                                XIII, 3)</li>
+                        </ul>
                     </div>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_65" href="document.xq?doc=cnw0065.xml">CNW 65</a></p>
-                    <div><i>Fantasistykker for obo og klaver</i>, op. 2
+                    <div><i>Fantasistykker for obo og klaver</i>, opus 2
                         <ul class="bullet">
                             <li>Nr. 1: <i>Romance</i>
                         arranged for violin and small orchestra by Hans Sitt, Wilhelm Hansen
@@ -582,7 +612,7 @@ København</span></a> Jørgen Bentzons arkiv
                     </div>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_70" href="document.xq?doc=cnw0070.xml">CNW 70</a></p>
-                    <div><i>Kvintet for fløjte, obo, klarinet, horn og fagot</i>, op. 43
+                    <div><i>Kvintet for fløjte, obo, klarinet, horn og fagot</i>, opus 43
                         <ul class="bullet">
                             <li>Arrangement for piano four hands by Viktor Brandt Jensen (1929–30)
                             (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
@@ -591,7 +621,7 @@ København</span></a> mu 1004.2200)</li>
                     </div>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_81" href="document.xq?doc=cnw0081.xml">CNW 81</a></p>
-                    <div><i>Fem Klaverstykker</i>, op. 3
+                    <div><i>Fem Klaverstykker</i>, opus 3
                         <ul class="bullet">
                             <li>No. 2: <i>Humoreske</i> arranged for
                         violin, cello and piano by Nicolai Hansen, in: <i>Trio-Album</i> vol. 6,
@@ -600,7 +630,7 @@ København</span></a> mu 1004.2200)</li>
                     </div>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_82" href="document.xq?doc=cnw0082.xml">CNW 82</a></p>
-                    <div><i>Symfonisk Suite</i> for klaver, op. 8
+                    <div><i>Symfonisk Suite</i> for klaver, opus 8
                         <ul class="bullet">
                             <li>First movement,
                             <i>Intonation</i>, arranged for organ by Paul Gerhardt, Wilhelm Hansen
@@ -617,7 +647,7 @@ København</span></a> mu 1004.2200)</li>
                     </div>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_100" href="document.xq?doc=cnw0100.xml">CNW 100</a></p>
-                    <div><i>Hymnus amoris</i>, op. 12
+                    <div><i>Hymnus amoris</i>, opus 12
                         <ul class="bullet">
                             <li>'Amor mihi vitam donat' arranged for SSA
                         by Hakon Andersen and/or Finn Høffding, in: <i>Gymnasiesangbogen</i>,
@@ -626,7 +656,7 @@ København</span></a> mu 1004.2200)</li>
                     </div>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_102" href="document.xq?doc=cnw0102.xml">CNW 102</a></p>
-                    <div><i>Fynsk Foraar</i>, op. 42
+                    <div><i>Fynsk Foraar</i>, opus 42
                         <ul class="bullet">
                             <li>'Kom her, kom her Fiol og Klarinet'
                         arranged for SATB and piano by Hakon Andersen and/or Finn Høffding, in:
