--- a/cat-site/cnw/preface.html
+++ b/cat-site/cnw/preface.html
@@ -18,7 +18,7 @@
               Samling. Katalog over komponistens musikhåndskrifter i Det kongelige Bibliotek</i>. Copenhagen 1992</span></a>  
         description of Nielsen&apos;s manuscripts in The Royal Library (1992) is
         one of the most important groundworks. 
-        Strictly speaking however, none of these are catalogues of <i>works</i>. Their numberings are mainly 
+        Strictly speaking, however, none of these are catalogues of <i>works</i>. Their numberings are mainly 
         related to bibliographical items – prints (FS) and manuscripts (CNS), respectively. 
         Though they may to some degree serve as work catalogues, there is no strict 
         one-to-one relationship between compositions and the catalogue numbers. For instance, 
