--- a/cat-site/cnw/preface.html
+++ b/cat-site/cnw/preface.html
@@ -11,7 +11,7 @@
         prepared of which <a class="abbr" 
 			     href="javascript:void(0);">Fog and Schousboe&apos;s<span class="expan">Dan Fog and Torben Schousboe: 
             <i>Carl Nielsen. Kompositioner. En Bibliografi</i>. Copenhagen 1965</span></a> bibliography (1965) was the first.
-        Also thr <a class="abbr" 
+        Also the <a class="abbr" 
                     href="javascript:void(0);">Bjørnum and
           Møllerhøj<span 
                       class="expan">Birgit Bjørnum and Klaus Møllerhøj, <i>Carl Nielsens
