CNW book version also available
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@254 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/cnw/preface.html
+++ b/cat-site/cnw/preface.html
@@ -6,7 +6,7 @@
   <body>
     <div id="main">
       <h1>Preface</h1>
-      <p>The Catalogue of Carl Nielsen&apos;s Works (CNW) is the first ever thematic-bibliographic registration of all
+      <p>The <i>Catalogue of Carl Nielsen&apos;s Works</i> (CNW) is the first ever thematic-bibliographic registration of all
         Nielsen&apos;s compositions. A few catalogues have previously been
         prepared of which <a class="abbr" 
 			     href="javascript:void(0);">Fog and Schousboe&apos;s<span class="expan">Dan Fog and Torben Schousboe: 
@@ -51,7 +51,9 @@
               Nielsen til sin samtid</i>. Copenhagen 1999</span></a>, and the current bibliography
         available in the journal, <a href="https://tidsskrift.dk/index.php/carlnielsenstudies" 
 				     title="Carl Nielsen Studies – fulltext online" target="_blank"><i>Carl Nielsen Studies</i></a>,
-        all affiliated with The Royal Library. </p>
+				     all affiliated with The Royal Library. </p>
+      <p>A book version of the catalogue is available from <a href="http://www.mtp.hum.ku.dk/details.asp?eln=203742" 
+        title="CNW at Museum Tusculanum Press" target="_blank">Museum Tusculanum Press</a></p>
       <p>We wish to express our sincerest
         thanks to Carl Nielsen og Anne Marie Carl-Nielsens Legat (the Carl Nielsen 
         and Anne Marie Carl-Nielsen&apos;s Foundation) for
