updated mail address
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@264 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/cnw/about.html
+++ b/cat-site/cnw/about.html
@@ -16,7 +16,7 @@
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
             WWW: <a href="http://www.kb.dk/dcm">www.kb.dk/dcm</a><br/>
-            E-mail: <a href="mailto://foa-dcm@kb.dk">foa-dcm@kb.dk</a></span></p> 
+            E-mail: <a href="mailto://foa-dcm@kb.dk">dcm-alle@kb.dk</a></span></p> 
         <p><span class="label">&#160;</span><span>&#169; 2014</span></p>
         <p><span class="label">Translation of song titles and first lines:</span><span><br/>Holger Scheibel</span></p>
         <p><span class="label">Technical development:</span><span>Sigfrid Lundberg, Axel Teich Geertinger</span></p>
