--- a/cat-site/hartw/navigation.html
+++ b/cat-site/hartw/navigation.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-    <title id="HartW">Catalogue of Johan Peter Emilius Hartmann&apos;s Works</title>
+    <title id="HartW">Johan Peter Emilius Hartmann. Thematic-Bibliographic Catalogue of His Works</title>
   </head>
   <body>
   </body>
