--- a/cat-site/nwgw/about.html
+++ b/cat-site/nwgw/about.html
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-    <title id="HartW">Johan Peter Emilius Hartmann. Thematic-Bibliographic Catalogue of His Works</title>
+    <title id="NWGW">Niels W. Gade. Thematic-Bibliographic Catalogue of His Works</title>
   </head>
   <body>
     <div id="main">
-      <h1>Johan Peter Emilius Hartmann. Thematic-Bibliographic Catalogue of His Works</h1>
+      <h1>Niels W. Gade. Thematic-Bibliographic Catalogue of His Works</h1>
       <div id="colophon">
         <p>
           <span class="label">Edited by: </span><span>Inger Sørensen</span>
@@ -13,13 +13,13 @@
         <p>
           <span class="label">Incipits: </span><span>Birthe Skou</span>
         </p>
-        <p><span class="label">Published by: </span><span>Danish Centre for Music Publication<br/>
+        <p><span class="label">Published by: </span><span>Danish Centre for Music Editing<br/>
             The Royal Library<br/>
             P.O. Box 2149<br/>
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
             WWW: <a href="http://www.kb.dk/dcm">www.kb.dk/dcm</a><br/>
-            E-mail: <a href="mailto://foa-dcm@kb.dk">foa-dcm@kb.dk</a></span></p> 
+            E-mail: <a href="mailto://dcm-dl-alle@kb.dk">dcm-dl-alle@kb.dk</a></span></p> 
         <p><span class="label">&#160;</span><span>&#169; 2017</span></p>
         <p><span class="label">Technical development:</span><span>Axel Teich Geertinger, Sigfrid Lundberg</span></p>
         <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
