--- a/cat-site/nwgw/introduction.html
+++ b/cat-site/nwgw/introduction.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-      <title id="HartW">Johan Peter Emilius Hartmann. Thematic-Bibliographic Catalogue of His Works</title>
+      <title id="NWGW">Niels W. Gade. Thematic-Bibliographic Catalogue of His Works</title>
     </head>
     <body>
       <div id="main">
