--- a/cat-site/nwgw/preface.html
+++ b/cat-site/nwgw/preface.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-    <title id="HartW">Johan Peter Emilius Hartmann. Thematic-Bibliographic Catalogue of His Works</title>
+    <title id="NWGW">Niels W. Gade. Thematic-Bibliographic Catalogue of His Works</title>
   </head>
   <body>
     <div id="main">
       <h1>Preface</h1>
-      <p>The Catalogue of J. P. E. Hartmanns Works (HartW) ...</p>
+      <p>...</p>
       <div><br clear="all"/></div>
     </div>
   </body>
