added HartW texts
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@284 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/hartw/preface.html
+++ b/cat-site/hartw/preface.html
@@ -6,8 +6,39 @@
   </head>
   <body>
     <div id="main">
-      <h1>Preface</h1>
-      <p>The Catalogue of J. P. E. Hartmanns Works (HartW) ...</p>
+      <h1>Series Editor’s Foreword</h1>
+      <p> </p>
+      <p>J.P.E. Hartmann (1805–1900) is one of Denmark’s greatest composers. Throughout his long life he played a central role, not only in Danish 
+        musical life but in the entire cultural life of the nineteenth century, although he never became as well known abroad as his son Emil Hartmann (1836–1898) 
+        or his son-in-law Niels W. Gade (1817–1890).</p>
+      <p> </p>
+      <p>Since the 1990s The Royal Library’s research and publication programme has had focus on J.P.E. Hartmann as a composer and as a central cultural figure. 
+        During 1999–2002 his correspondence with his circle of acquaintances was published, and in 2002 a scholarly-practical edition of a selection of his 
+        musical works was initiated. An extensive biography of the family by Inger Sørensen was also published, in 1999.</p>
+      <p> </p>
+      <p>A survey of his enormous production has long been in preparation. His works include nearly five hundred works composed over the span of seventy-six years, 
+        and here they are presented in a scholarly, thematic-bibliographic work catalogue. This publication, the culmination of its author’s many years of 
+        work on J.P.E. Hartmann’s oeuvre, his life and times, is intended as a tool for future research in Danish music- and cultural history of the nineteenth century.</p>
+      <p> </p>
+      <p>Bibliographic catalogues of composers’ works appear in many shapes and flavours. The scholarly thematic-bibliographic catalogue dates back to the nineteenth 
+        century when the music historian Ludwig Ritter von Köchel established an international standard with his Mozart catalogue of 1862. It has since appeared in 
+        many editions and impressions (1863–1999), and provided a model that has been developed and followed by musicologists in many countries for other great composers. 
+        In Denmark, a catalogue of Carl Nielsen (1865–1931)’s works was published by The Royal Library in 2014 and 2016.</p>
+      <p> </p>
+      <p>The <em>HartW</em>, the catalogue’s official acronym, has been prepared employing the new database software developed in an international context by the 
+        <a href="http://www.kb.dk/da/nb/dcm/">Danish Centre for Music Editing</a> at The Royal Library for precisely such work catalogues.</p>
+      <p> </p>
+      <p>Publications of this kind cannot be prepared and published without generous support from many quarters. 
+        The work started with a personal grant in 2010 from Augustinus Fonden to former senior researcher, Inger Sørensen, 
+        so that the project could be housed at the Danish Centre for Music Editing. This was followed by a new grant to 
+        The Royal Library when the catalogue was nearly finished, which meant that the preparation of the incipits, the introductory 
+        bars of each section or movement for the identification of the musical works, could be completed. 
+        On behalf of The Royal Library, it gives me great pleasure to extend my warmest thanks to Augustinus Fonden for this invaluable support.</p>
+      <p> </p>
+      <p style="text-align:right;"><em>The Royal Library </em><br/><em>October 2016</em></p>
+      <p><em> </em></p>
+      <p style="text-align:right;">Erland Kolding Nielsen<br/>
+      Director General</p>      
       <div><br clear="all"/></div>
     </div>
   </body>
