--- a/cat-site/hartw/about.html
+++ b/cat-site/hartw/about.html
@@ -13,18 +13,18 @@
         <p>
           <span class="label">Incipits: </span><span>Birthe Skou</span>
         </p>
-        <p><span class="label">Published by: </span><span>Danish Centre for Music Publication<br/>
-            The Royal Library<br/>
+        <p><span class="label">Published by: </span><span>Danish Centre for Music Editing<br/>
+            Royal Danish Library<br/>
             P.O. Box 2149<br/>
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
             WWW: <a href="http://www.kb.dk/dcm">www.kb.dk/dcm</a><br/>
-            E-mail: <a href="mailto://foa-dcm@kb.dk">foa-dcm@kb.dk</a></span></p> 
+            E-mail: <a href="mailto://foa-dcm@kb.dk">dcm-dl-alle@kb.dk</a></span></p> 
         <p><span class="label">&#160;</span><span>&#169; 2017</span></p>
         <p><span class="label">Technical development:</span><span>Axel Teich Geertinger, Sigfrid Lundberg</span></p>
         <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
 							    title="See MerMEId project page">MerMEId</a></span></p>
-        <p><span class="label">Sponsors: </span><span></span></p>
+        <p><span class="label">Sponsor: </span><span>Augustinus Fonden</span></p>
         <p>&#160;</p>
       </div>
     </div>
