--- a/cat-site/hartw/menu.html
+++ b/cat-site/hartw/menu.html
@@ -1,5 +1,6 @@
 <div id="menu" class="noprint">
-   <a href="preface.xq" class="preface">Preface</a>
+   <a href="preface.xq" class="preface">Foreword</a>
+   <a href="acknowledgements.xq" class="acknowledgements">Acknowledgements</a>
    <a href="introduction.xq" class="introduction">Introduction</a>
    <a href="navigation.xq" class="navigation">Catalogue</a>
    <a href="about.xq" class="about">About HartW</a>)
