--- a/cat-site/hartw/introduction.html
+++ b/cat-site/hartw/introduction.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-      <title id="HartW">Johan Peter Emilius Hartmann. Thematic-Bibliographic Catalogue of His Works</title>
+      <title id="HartW">J.P.E. Hartmann. Thematic-Bibliographic Catalogue of His Works</title>
     </head>
     <body>
       <div id="main">
@@ -56,7 +56,7 @@
           prepared a chronological catalogue and an alphabetical list of song titles and first lines. 
           Finally, in 1991 the music antiquarian Dan Fog (1919–2000) published his <em>Hartmann-Katalog. Fortegnelse over J.P.E. Hartmanns trykte kompositioner</em>. 
           As the title indicates, the catalogue only includes printed works, though he does include manuscripts in an introductory list; 
-          the main section, however, comprises detailed bibliographical information on all printede works. These listed in the catalogue are numbered from 1 to 228. 
+          the main section, however, comprises detailed bibliographical information on all printed works. Those listed in the catalogue are numbered from 1 to 228. 
           Most of the numbers include a single musical work as for instance ‘Sonate Nr. 1 i g-mol for violin og klaver, Opus 8’ (DF 1). 
           Later numbers, however, may also include publications such as ‘Romancer og Sange Afdeling 1-3’ (DF 215) and hence the same song may appear 
           under several different numbers. One example is ‘Giv Tid’ (I Sne staar Urt og Busk i Skjul), which has been assigned the numbers 163, 
@@ -119,20 +119,20 @@
           (‘Snart er Natten svunden’) in <em>Syvsoverdag</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1331831767.xml">HartW 14</a>, 
             are not considered independent pieces and have therefore not been assigned a HartW number.</p>
         <p>Songs and choral pieces that are part of a collection, irrespective of whether the collection only includes songs by Hartmann 
-          (<em>Sex Sange af B.S. Ingemann, Opus 45</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1321021283.xml">HartW Coll. 4</a>) 
+          (<em>Sex Sange af B.S. Ingemann, Opus 45</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1321021283.xml">HartW Coll. 04</a> ) 
           or whether they were published in a broader context with works by other composers 
           (<em>Sange for Studenterforeningen</em>), have been registered as individual works and assigned a HartW number. Cyclical works such as 
           <em>Sulamiths og Salomons Sange,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1321467871.xml">HartW 355</a>, 
           are exceptions. The same principle has been employed for collections of piano pieces 
           originally conceived as individual works (<em>Tre Klaverstykker, opus 38,</em> 
-          <a class="work_number_reference" title="View work details" href="document.xq?doc=1349443583.xml">HartW Coll. 03</a>). An outline of the collections’ contents 
+          <a class="work_number_reference" title="View work details" href="document.xq?doc=1349443583.xml">HartW Coll. 03</a> ). An outline of the collections’ contents 
           with an indication of the most important common information has been placed in the final part of the appendix.</p>
         <p> </p>
         <p>In those instances where a melody of Hartmann’s has been used to various texts, the more recent texts are listed with the alternative 
           title under the main entry number (<em>Birkedals Sølvbryllup / Hil Dig! Vor Fane,</em> 
-          <a class="work_number_reference" title="View work details" href="document.xq?doc=1323947903.xml">HartW 395</a>). Arrangements of a composition are not 
+          <a class="work_number_reference" title="View work details" href="document.xq?doc=1323947903.xml">HartW 395</a> ). Arrangements of a composition are not 
           defined as independent works and are therefore placed under the same HartW number (for example, the orchestral suite consisting of pieces from 
-          <em>Thrymskviden</em>, <a class="work_number_reference" title="View work details" href="document.xq?doc=1335951103.xml">HartW 8</a>).</p>
+          <em>Thrymskviden</em>, <a class="work_number_reference" title="View work details" href="document.xq?doc=1335951103.xml">HartW 8</a> ).</p>
         <div class="toplink noprint"><a href="#top">To top of page</a></div>
         <p> </p>
         <h3><a name="identification">Identification</a></h3>
@@ -143,13 +143,13 @@
         <p>The title appearing in the first printed edition is employed as main title in the catalogue. 
           Regarding unpublished works, the main title is that of the autograph or, if that has not survived, the transcript (or transcripts) 
           that document the work’s existence. All significant titles are reproduced in the source’s original language 
-          (<em>Sechs Tonstücke in Liederform,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1349432255.xml">HartW 76</a>) 
+          (<em>Sechs Tonstücke in Liederform,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1349432255.xml">HartW 76</a> ) 
           while titles designating a genre are given in standardized form 
-          (<em>Sonate for klaver i a-mol,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1285750781.xml">HartW 119</a>). 
+          (<em>Sonate for klaver i a-mol,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1285750781.xml">HartW 119</a> ). 
           If an instrumental work does not carry any title, the tempo marking 
-          (<em>Allegro moderato,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1351172095.xml">HartW 108</a>) 
+          (<em>Allegro moderato,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1351172095.xml">HartW 108</a> ) 
           is employed, while the text's first line is used for vocal works 
-          (<em>Himmelske Lyd! som en Engel med Vinger,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1345797110.xml">HartW 141</a>). 
+          (<em>Himmelske Lyd! som en Engel med Vinger,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1345797110.xml">HartW 141</a> ). 
           Works which include incidental music are provided with titles such as 
           <em>Musik til Adam Oehlenschlägers Tragedie Olaf den Hellige,</em> <a class="work_number_reference" title="View work details" href="document.xq?doc=1331318267.xml">HartW 11</a>, 
           as otherwise the title would refer to the play or drama. 
@@ -158,7 +158,7 @@
           In those instances where a work has several different variants of the main title – typically if the title in a printed edition is 
           different from that of the autograph manuscript (<em>Koncert-Indledning komponeret for Solo, Kor og Orkester af Chr. Richardt</em> 
           og ‘<em><span style="text-decoration: underline;">Indledning’</span> ved Indvielsen af Universitetets Solennitetssal Marts 1866,</em> 
-          <a class="work_number_reference" title="View work details" href="document.xq?doc=1316708335.xml">HartW 168</a>) 
+          <a class="work_number_reference" title="View work details" href="document.xq?doc=1316708335.xml">HartW 168</a> ) 
           – these are listed as variant titles. First lines of songs are also given as variant titles.</p>
         <div class="toplink noprint"><a href="#top">To top of page</a></div>
         <p></p>
