minor textual corrections
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@286 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/hartw/acknowledgements.html
+++ b/cat-site/hartw/acknowledgements.html
@@ -34,7 +34,7 @@
         registered works in the same order as the catalogue, have been of invaluable service.</p>
       <p>Finally I wish to express my most heartfelt thanks to the great-great-grandchild of J.P.E. Hartmann, 
         the lawyer Denis Waelbroeck, Brussels, who has shown an exceptional interest in my work on his family’s history and music. 
-        This book is dedicated to him.</p>
+        This catalogue is dedicated to him.</p>
       <p style="text-align:right;">Virum, December 2016<br/>
       Inger Sørensen</p>      
       <div><br clear="all"/></div>
