--- a/cat-site/hartw/preface.html
+++ b/cat-site/hartw/preface.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="main">
-      <h1>Series Editor’s Foreword</h1>
+      <h1>Foreword</h1>
       <p> </p>
       <p>J.P.E. Hartmann (1805–1900) is one of Denmark’s greatest composers. Throughout his long life he played a central role, not only in Danish 
         musical life but in the entire cultural life of the nineteenth century, although he never became as well known abroad as his son Emil Hartmann (1836–1898) 
