SchW details edited
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@291 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/schw/about.html
+++ b/cat-site/schw/about.html
@@ -10,21 +10,20 @@
         <p>
           <span class="label">Edited by: </span><span>Peter Hauge</span>
         </p>
-        <!--<p>
-          <span class="label">Incipits: </span><span>NN</span>
-        </p>-->
+        <p>
+          <span class="label">Incipits: </span><span>Peter Hauge, Birthe Skou and Axel Teich Geertinger</span>
+        </p>
         <p><span class="label">Published by: </span><span>Danish Centre for Music Editing<br/>
             The Royal Library<br/>
             P.O. Box 2149<br/>
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
-            WWW: <a href="http://www.kb.dk/dcm">www.kb.dk/dcm</a><br/>
-            E-mail: <a href="mailto://foa-dcm@kb.dk">foa-dcm@kb.dk</a></span></p> 
-        <p><span class="label">&#160;</span><span>&#169; 2016</span></p>
-        <p><span class="label">Technical development:</span><span>Sigfrid Lundberg, Axel Teich Geertinger</span></p>
+            WWW: <a href="http://www.kb.dk/en/nb/dcm/">www.kb.dk/en/nb/dcm/</a><br/>
+            E-mail: <a href="mailto://dcm-dl-alle@kb.dk">dcm-dl-alle@kb.dk</a></span></p> 
+        <p><span class="label">&#160;</span><span>&#169; 2017</span></p>
+        <p><span class="label">Technical development:</span><span>Axel Teich Geertinger, Sigfrid Lundberg</span></p>
         <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
 							    title="See MerMEId project page">MerMEId</a></span></p>
-        <!--<p><span class="label">Sponsors: </span><span>...</span></p>-->
         <p>&#160;</p>
       </div>
     </div>
