updated contact information
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@296 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/cnw/about.html
+++ b/cat-site/cnw/about.html
@@ -10,14 +10,14 @@
         <p>
           <span class="label">Edited by: </span><span>Niels Bo Foltmann, Axel Teich Geertinger, Peter Hauge, Niels Krabbe, Bjarke Moe, Elly Bruunshuus Petersen</span>
         </p>
-        <p><span class="label">Published by: </span><span>Danish Centre for Music Publication<br/>
-            The Royal Library<br/>
+        <p><span class="label">Published by: </span><span>Danish Centre for Music Editing<br/>
+            Royal Danish Library<br/>
             P.O. Box 2149<br/>
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
-            WWW: <a href="http://www.kb.dk/dcm">www.kb.dk/dcm</a><br/>
-            E-mail: <a href="mailto://foa-dcm@kb.dk">dcm-alle@kb.dk</a></span></p> 
-        <p><span class="label">&#160;</span><span>&#169; 2014</span></p>
+            WWW: <a href="http://www.kb.dk/en/nb/dcm/">www.kb.dk/en/nb/dcm/</a><br/>
+            E-mail: <a href="mailto://dcm-dl-alle@kb.dk">dcm-dl-alle@kb.dk</a></span></p> 
+        <p><span class="label">&#160;</span><span>&#169; 2014-2017</span></p>
         <p><span class="label">Translation of song titles and first lines:</span><span><br/>Holger Scheibel</span></p>
         <p><span class="label">Technical development:</span><span>Sigfrid Lundberg, Axel Teich Geertinger</span></p>
         <p><span class="label">Assistant:</span><span>Katarina Smitt Engberg</span></p>
