--- a/cat-site/nwgw/about.html
+++ b/cat-site/nwgw/about.html
@@ -14,7 +14,7 @@
           <span class="label">Incipits: </span><span>Birthe Skou</span>
         </p>
         <p><span class="label">Published by: </span><span>Danish Centre for Music Editing<br/>
-            The Royal Library<br/>
+            Royal Danish Library<br/>
             P.O. Box 2149<br/>
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
