--- a/cat-site/schw/about.html
+++ b/cat-site/schw/about.html
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-    <title id="SchW">Catalogue of Johann Adolph Scheibe's Works</title>
+    <title id="SchW">Johann Adolph Scheibe. A Catalogue of His Works</title>
   </head>
   <body>
     <div id="main">
-      <h1>Catalogue of Johann Adolph Scheibe's Works</h1>
+      <h1>Johann Adolph Scheibe. A Catalogue of His Works</h1>
       <div id="colophon">
         <p>
           <span class="label">Edited by: </span><span>Peter Hauge</span>
@@ -14,7 +14,7 @@
           <span class="label">Incipits: </span><span>Peter Hauge, Birthe Skou and Axel Teich Geertinger</span>
         </p>
         <p><span class="label">Published by: </span><span>Danish Centre for Music Editing<br/>
-            The Royal Library<br/>
+            Royal Danish Library<br/>
             P.O. Box 2149<br/>
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
