--- a/cat-site/cnw/menu.html
+++ b/cat-site/cnw/menu.html
@@ -3,5 +3,5 @@
    <a href="introduction.xq" class="introduction">Introduction</a>
    <a href="navigation.xq" class="navigation">Catalogue</a>
    <a href="appendix.xq" class="appendix">Appendix</a>
-   <a href="about.xq" class="about">About CNW</a>)
+   <a href="about.xq" class="about">About CNW</a>
 </div> 
