--- a/cat-site/hartw/menu.html
+++ b/cat-site/hartw/menu.html
@@ -3,5 +3,5 @@
    <a href="acknowledgements.xq" class="acknowledgements">Acknowledgements</a>
    <a href="introduction.xq" class="introduction">Introduction</a>
    <a href="navigation.xq" class="navigation">Catalogue</a>
-   <a href="about.xq" class="about">About HartW</a>)
+   <a href="about.xq" class="about">About HartW</a>
 </div> 
