--- a/cat-site/nwgw/menu.html
+++ b/cat-site/nwgw/menu.html
@@ -2,5 +2,5 @@
    <a href="preface.xq" class="preface">Preface</a>
    <a href="introduction.xq" class="introduction">Introduction</a>
    <a href="navigation.xq" class="navigation">Catalogue</a>
-   <a href="about.xq" class="about">About HartW</a>)
+   <a href="about.xq" class="about">About NWGW</a>
 </div> 
