--- a/cat-site/schw/introduction.html
+++ b/cat-site/schw/introduction.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-      <title id="SchW">Catalogue of Johann Adolph Scheibe's Works</title>
+      <title id="SchW">Johann Adolph Scheibe. A Catalogue of His Works</title>
     </head>
     <body>
       <div id="main">
       <h1>Introduction</h1>
       
 
- <p style="text-align:right; font-style:italic;">The editors</p>
+ <p style="text-align:right; font-style:italic;">Peter Hauge</p>
  <p>&#160;</p>
       </div>
     </body>
