--- a/cat-site/schw/preface.html
+++ b/cat-site/schw/preface.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-    <title id="SchW">Catalogue of Johann Adolph Scheibe's Works</title>
+    <title id="SchW">Johann Adolph Scheibe. A Catalogue of His Works</title>
   </head>
   <body>
     <div id="main">
