--- a/cat-site/hartw/about.html
+++ b/cat-site/hartw/about.html
@@ -13,13 +13,12 @@
         <p>
           <span class="label">Incipits: </span><span>Birthe Skou</span>
         </p>
-        <p><span class="label">Published by: </span><span>Danish Centre for Music Editing<br/>
+        <p><span class="label">Published by: </span>Danish Centre for Music Editing<br/>
             Royal Danish Library<br/>
             P.O. Box 2149<br/>
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
-            WWW: <a href="http://www.kb.dk/da/nb/dcm/">www.kb.dk/da/nb/dcm/</a><br/>
-            E-mail: <a href="mailto://dcm-dl-alle@kb.dk">dcm-dl-alle@kb.dk</a></span></p> 
+            WWW: <a href="http://www.kb.dk/da/nb/dcm/">www.kb.dk/da/nb/dcm/</a></p> 
         <p><span class="label">&#160;</span><span>&#169; 2017</span></p>
         <p><span class="label">Technical development:</span><span>Axel Teich Geertinger, Sigfrid Lundberg</span></p>
         <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
