--- a/cat-site/schw/about.html
+++ b/cat-site/schw/about.html
@@ -18,8 +18,7 @@
             P.O. Box 2149<br/>
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
-            WWW: <a href="http://www.kb.dk/en/nb/dcm/">www.kb.dk/en/nb/dcm/</a><br/>
-            E-mail: <a href="mailto://dcm-dl-alle@kb.dk">dcm-dl-alle@kb.dk</a></span></p> 
+            WWW: <a href="http://www.kb.dk/en/nb/dcm/">www.kb.dk/en/nb/dcm/</a></span></p> 
         <p><span class="label">&#160;</span><span>&#169; 2017</span></p>
         <p><span class="label">Technical development:</span><span>Axel Teich Geertinger, Sigfrid Lundberg</span></p>
         <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
