corrections to CNW text and footer

--- a/cat-site/cnw/introduction.html
+++ b/cat-site/cnw/introduction.html
@@ -281,18 +281,18 @@
 				<li>Numbers: select the type of number (CNW, Opus, or FS) from the first list and the 
 					desired number from the second list. Click the &apos;Search&apos; button to start searching.</li>
 				<li>Year of composition: the search may be limited to works that are composed in a
-					particular period by adjusting the slides and clicking the
-					&apos;Search&apos; button. Searching by year includes all works completed or in
-					progress during the desired period.</li>
+					particular period by entering the desired year span and clicking the
+					&apos;Search&apos; button. Searching by year includes all works completed <!--or in
+					progress--> during the desired period.</li>
 				<li>Genre: by clicking on a genre designation, the search is limited to those works
 					that are listed under that particular genre as the work&apos;s primary genre.
 					Other genre designation such as 'cantata' may be searched for using the keyword
 					search field. </li>
-				<li>Song collections: as a standard the list of search includes not only the
+				<!--<li>Song collections: as a standard the list of search includes not only the
 					individual songs by Nielsen but also the song collections in which they appeared
 					such as <i>Folkehøjskolens Melodibog</i> or <i>Salmer og aandelige Sange</i>. In
 					order to exclude such collections from the search results, the checkbox
-					&apos;Exclude anthologies&apos; must be ticked off.</li>
+					&apos;Exclude anthologies&apos; must be ticked off.</li>-->
 			</ul>
 			<p>All search limitations function additively, that is, a simultaneous use of several
 				search parameters confines the result further (logically &apos;AND&apos;). Each
