updated texts and SchW names list

--- a/cat-site/cnw/introduction.html
+++ b/cat-site/cnw/introduction.html
@@ -323,7 +323,7 @@
 			<p>A certain amount of information is displayed directly on each record. For the sake of
 				clarity, other data may be hidden under the tabs with a plus sign <img
 					src="style/images/plus.png" alt="plus sign" />, that is &apos;Music&apos;,
-				&apos;Performances&apos;, &apos;Sources&apos;, &apos;Primary texts&apos; and
+				&apos;Performances&apos;, &apos;Sources&apos;, &apos;Documents&apos; and
 				&apos;Bibliography&apos;. By clicking on the sign the hidden information will unfold
 				and may be closed again. </p>
 			<div class="toplink noprint"><a href="#top">To top of page</a></div>
