--- a/cat-site/schw/preface.html
+++ b/cat-site/schw/preface.html
@@ -6,9 +6,57 @@
   </head>
   <body>
     <div id="main">
+
       <h1>Preface</h1>
-      <p>The Catalogue of Johann Adolph Scheibe's Works (SchW) ...</p>
-      <div><br clear="all"/></div>
+
+      <p>The present database is the first ever, descriptive catalogue of Johann Adolph Scheibe's
+        production including his musical works – ranging from large-scale cantatas and oratorios to
+        sinfonias, chamber music and to communal songs – translations, fiction and satire, studies
+        on music theory, and history as well as performance practice.</p>
+
+      <p>The catalogue's point of departure is different from the traditional ones in that it seeks
+        to include those musical works which apparently have not survived but for which there is
+        clear evidence of having existed, for example represented by the large number of printed
+        librettos. The database provides not only new information on Scheibe, the composer,
+        translator and educator, but presents also new light on the musical life in Denmark and in
+        particular Copenhagen during the eighteenth century.</p>
+
+      <p>The Introduction to each work draws on primary sources in The Royal Library, The Royal
+        Archives in Copenhagen as well as other places. Among the secondary sources, the following
+        have been employed in particular:</p>
+
+      <p>Vilhelm Carl Ravn, <em>Festsktrift i Anledning af Musikforeningens Halvhundredaarsdag
+        </em>(Copenhagen 1886), vol. 1, pp. 28–98</p>
+
+      <p>Vilhelm Carl Ravn, ‘Scheibe, Johann Adolph’, in Carl Frederik Bricka (ed.), <em>Dansk
+          biografisk Lexikon</em>, (Copenhagen 1887–1905), vol. 15, pp. 98–102</p>
+
+      <p>Carl Thrane, <em>Fra Hofviolonernes Tid </em>(Copenhagen 1908), pp. 74–95, 105–118</p>
+
+      <p>Inge Henriksen, ‘Johann Adolph Scheibe og Det musikalske Societet i København’, <em>Dansk
+          årbog for musikforskning</em>, 7 (1973), pp. 103–24</p>
+
+      <p>George J. Buelow, ‘Scheibe, Johann Adolph’, in <em>Grove Music Online </em>(2000) at
+        <a href="http://oxfordmusiconline.com" target="_blank">oxfordmusiconline.com</a></p>
+      
+      <p>Ludwig Finscher (ed.), <em>Die Musik in Geschichte und Gegenwart </em>(Kassel 2005), vol.
+        14, cols. 1201–05</p>
+
+      <p>Peter Hauge, ‘Johann Adolph Scheibe (1708–76) and Copenhagen’, <em>Fund og Forskning i Det
+          Kongelige Biblioteks samlinger</em>, 50 (2011), pp. 315–43</p>
+
+      <p>Peter Hauge (ed.), <em>Johann Adolph Scheibe: Passion cantata (‘Our harp has become
+          sorrow’) </em>(Copenhagen 2012), pp. v–xxvi</p>
+
+      <p>Peter Hauge, ‘Composer, translator and educator: Kapellmeister Scheibe and the emerging
+        liberal market during the second half of the eighteenth century’, <em>Fund og Forskning i
+          Det Kongelige Biblioteks samlinger</em>, 55 (2016), pp. 179–211</p>
+
+      <p>Peter Hauge, ‘The critical editing of a musical work on the basis of incomplete performance
+        material: Scheibe’s second Passion cantata, “Sørge-Cantate ved Christi Grav” (1769)’,
+          <em>Danish Yearbook of Musicology</em>, 40 (2016), pp. 9–32</p>
+      <p> </p>
+      <div><br clear="all" /></div>
     </div>
   </body>
 </html>
