minor adjustments; added full names/dates

--- a/cat-site/schw/preface.html
+++ b/cat-site/schw/preface.html
@@ -10,7 +10,7 @@
       <h1>Preface</h1>
 
       <p>The present database is the first ever, descriptive catalogue of Johann Adolph Scheibe's
-        production including his musical works – ranging from large-scale cantatas and oratorios to
+        (1708–1776) production including his musical works – ranging from large-scale cantatas and oratorios to
         sinfonias, chamber music and to communal songs – translations, fiction and satire, studies
         on music theory, and history as well as performance practice.</p>
 
@@ -21,7 +21,7 @@
         translator and educator, but presents also new light on the musical life in Denmark and in
         particular Copenhagen during the eighteenth century.</p>
 
-      <p>The Introduction to each work draws on primary sources in The Royal Library, The Royal
+      <p>The Introduction to each work draws on primary sources in The Royal Danish Library, The Royal
         Archives in Copenhagen as well as other places. Among the secondary sources, the following
         have been employed in particular:</p>
 
