--- a/cat-site/hartw/preface.html
+++ b/cat-site/hartw/preface.html
@@ -8,7 +8,7 @@
     <div id="main">
       <h1>Foreword</h1>
       <p> </p>
-      <p>J.P.E. Hartmann (1805–1900) is one of Denmark’s greatest composers. Throughout his long life he played a central role, not only in Danish 
+      <p>J.P.E. Hartmann (Johan Peter Emilius Hartmann, 1805–1900) is one of Denmark’s greatest composers. Throughout his long life he played a central role, not only in Danish 
         musical life but in the entire cultural life of the nineteenth century, although he never became as well known abroad as his son Emil Hartmann (1836–1898) 
         or his son-in-law Niels W. Gade (1817–1890).</p>
       <p> </p>
